--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid android:color="@color/teal_700"/>
+<solid android:color="#9E1B2A"/>
     <size android:width="25dp"
         android:height="55dp"/>
     <corners android:radius="5dp"/>
